coloring the button

--- a/button.css
+++ b/button.css
@@ -123,3 +123,8 @@ body {
   background: #ff1fce;
   box-shadow: 0 0 15px #ff1fce, 0 0 30px #ff1fce, 0 0 60px #ff1fce;
 }
+.container .btn:nth-child(4)::before,
+.container .btn:nth-child(4)::after {
+  background: #fff;
+  box-shadow: 0 0 15px #fff, 0 0 30px #fff, 0 0 60px #fff;
+}
